Resolve scroll issue on mobile, and add horizontal scroll support on tabs if space are missing

--- a/projects/design-system/src/app/previewer/previewer.scss
+++ b/projects/design-system/src/app/previewer/previewer.scss
@@ -21,6 +21,7 @@ sh-tabs {
 .title {
   flex: 1 0;
   font: var(--paragraph-20B);
+  white-space: nowrap;
 
   .anchor-link {
     color: inherit;
@@ -28,13 +29,13 @@ sh-tabs {
     transition: all 0.2s;
     display: inline-flex;
     text-decoration: none;
-    
+
     &:hover,
     &:focus {
       opacity: 1;
       color: var(--primary-8);
     }
-    
+
     &.copied {
       opacity: 1;
       color: var(--success-8);
